# Imprint

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/: word_entry.h
core/src/: word_entry.cpp
tests/: CMakeLists.txt  logger_test.cpp
utils/: CMakeLists.txt
utils/include/: common.h  logger.h
utils/src/: common.cpp  logger.cpp
